M5.5a: writer's own lists off ArrayList (Vec)
Migrate ImageBuilder's own accumulation lists to a minimal Object[]-backed Vec:
the discovery queue (worklist, with removeFirst for the dequeue), clinitOrder,
blobs, the relocation accumulators (calls/tibs/strs/stats/types), the unwind
entry lists (frameEntries/handlerEntries), and the initClasses word buffer.
for-each over a Vec becomes indexed (a metal list isn't Iterable); enhanced-for
over the compiler's own lists stays. Pure refactor on the seed JVM:
byte-identical image.

What still uses java.util in the writer is now exactly the two separable
boundaries: the compiler's CompiledMethod record-lists (its relocation
contract, iterated via forEach) and ClassFile's returns (the parser). Both are
their own migrations -- CompiledMethod->Vec (compiler-side) and
ClassFile->ClassReader.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>